@@ -1,3 +1,9 @@
+2009-07-15  Janis Johnson  <janis187@us.ibm.com>
+
+	PR libstdc++/40691
+	* include/bits/valarray_after.h (_Expr::operator!): Fix return type.
+	* testsuite/26_numerics/valarray/40691.cc: New test.
+
 2009-07-13  Benjamin Kosnik  <bkoz@redhat.com>
 
 	* testsuite/29_atomics/atomic_address/cons/aggregate.cc: Remove xfail.
